--- a/ToDo
+++ b/ToDo
@@ -2,8 +2,10 @@ ToDos :
 - nextWave delay at start
 - wave transition
 - mag UI
-- power up spawner
-
+- power-up spawner
+- power-up UI
+- boss arena
+- 
 
 Done:
 
